--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera</title>
+	<title>Moiz's Page</title>
 </head>
 <body>
-	<h1>Hello its me mario</h1>
+	<h1>/This is Moiz's first page</h1>
 
 </body>
 </html>
