--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,8 @@
 	<title>Moiz's Page</title>
 </head>
 <body>
-	<h1>/This is Moiz's first page</h1>
+	<h1>/This is Moiz's first page... This page has been synced</h1>
+	<p>Kaalo kaalo kaalo tor kunnay</p>>
 
 </body>
 </html>
