--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,10 @@
 <body>
 	<h1>/This is Moiz's first page... This page has been synced</h1>
 	<p>Kaalo kaalo kaalo tor kunnay</p>>
+	<h2>Tor kattay</h2>
+	<h3>Badrang</h3>
+	<p>Kaaaaliaaaaa</p>
+	<p>Square face poon poon</p>
 
 </body>
 </html>
