--- a/site/index.html
+++ b/site/index.html
@@ -2,14 +2,19 @@
 <html>
 <head>
 	<title>Moiz's Page</title>
+	<style type="text/css">
+		h1 {
+	color: pink;
+}
+	</style>
 </head>
 <body>
-	<h1>/This is Moiz's first page... This page has been synced</h1>
-	<p>Kaalo kaalo kaalo tor kunnay</p>>
-	<h2>Tor kattay</h2>
-	<h3>Badrang</h3>
-	<p>Kaaaaliaaaaa</p>
-	<p>Square face poon poon</p>
+	<h2>Hello Best Friend </h2>
+
+
+	<h1>I love you</h1>
+
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png">
 
 </body>
 </html>
