--- a/site/index.html
+++ b/site/index.html
@@ -4,17 +4,17 @@
 	<title>Moiz's Page</title>
 	<style type="text/css">
 		h1 {
-	color: pink;
+	color: Blue;
 }
 	</style>
 </head>
 <body>
-	<h2>Hello Best Friend </h2>
+	<h2>Hello  </h2>
 
 
-	<h1>I love you</h1>
+	<h1>Moiz's page</h1>
 
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f1/Heart_coraz%C3%B3n.svg/1200px-Heart_coraz%C3%B3n.svg.png">
+	<img src="xddd.jpg">
 
 </body>
 </html>
