--- a/site/index.html
+++ b/site/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Moiz's Page</title>
-	<style type="text/css">
-		h1 {
-	color: Blue;
-}
-	</style>
+	<title> Assignment 1 </title>
 </head>
 <body>
-	<h2>Hello  </h2>
+	<h1>Our Menu</h1>
+
+	<h3>Chicken
+		<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed blandit orci. Curabitur venenatis tempus orci, suscipit sagittis nunc rhoncus id. Cras interdum felis turpis, at efficitur turpis varius a. Ut gravida ex quis erat ultricies, at gravida nunc accumsan. Pellentesque pulvinar tellus aliquam enim ultrices gravida. Morbi nulla leo, malesuada mattis elit et, feugiat pulvinar eros. Phasellus gravida est id nulla eleifend dignissim. Mauris sit amet ligula felis.</div>
+	</h3>
+
+	<h3> Beef
+		<div>Cras vestibulum diam in fringilla pulvinar. In non euismod tellus. Nunc congue risus et velit feugiat, eu tristique erat ullamcorper. Etiam urna tellus, pellentesque vel nulla et, posuere ullamcorper nisl. Sed a est consectetur, tincidunt velit id, pharetra magna. Mauris et velit elit. Suspendisse porttitor, purus id efficitur mattis, tortor purus malesuada ex, eu sagittis urna est id lectus. Vestibulum eget nulla eu turpis sollicitudin efficitur..</div>
+	</h3>
 
 
-	<h1>Moiz's page</h1>
+	<h3> Sushi
+		<div>Sed lacinia pretium odio eu faucibus. In risus turpis, lobortis at mi tincidunt, laoreet gravida velit. Maecenas commodo vel mi vitae vestibulum. Nam orci justo, tincidunt eget maximus nec, imperdiet ac ligula. Quisque eu pulvinar enim. Nullam nec feugiat lorem, in pellentesque ligula. </div>
+	</h3>
 
-	<img src="xddd.jpg">
+
+
+
+
+
 
 </body>
 </html>
