--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	
-	<div id="container">
+	<div >
   	<h1 style= "background-color: red";>Chicken</h1>
   	<p>ioahfiohfioaehfioaeiof aoifjaeoifaeiofhioaehfioa aoifjaeiofhaeiof faiofhaeiofhaeiofi</p>
 	</div>
