--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	
-	<div style=" background-color: grey; position: relative; width: 250px;">
+	<div style=" background-color: grey; position: relative; width: 250px; height: 250px";>
   	<h1 style= "background-color: red";>Chicken</h1>
   	<p>ioahfiohfioaehfioaeiof aoifjaeoifaeiofhioaehfioa aoifjaeiofhaeiof faiofhaeiofhaeiofi</p>
 	</div>
