--- a/site/index.html
+++ b/site/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 	
-	<div style=" background-color: grey; position: relative; width: 250px; height: 250px";>
-  	<h1 style= "background-color: red";>Chicken</h1>
+	<div style=" background-color: grey; position: relative; width: 250px; height: 250px;">
+  	<h1 style= "background-color: red; position: absolute;">Chicken</h1>
   	<p>ioahfiohfioaehfioaeiof aoifjaeoifaeiofhioaehfioa aoifjaeiofhaeiof faiofhaeiofhaeiofi</p>
 	</div>
 
