--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
 <body>
 	
 	<div style=" background-color: grey; position: relative; width: 250px; height: 250px;">
-  	<h1 style= "background-color: red; position: absolute;">Chicken</h1>
+  	<h1 style= "background-color: red; position: absolute; top: 250">Chicken</h1>
   	<p>ioahfiohfioaehfioaeiof aoifjaeoifaeiofhioaehfioa aoifjaeiofhaeiof faiofhaeiofhaeiofi</p>
 	</div>
 
