--- a/Site/Index.html
+++ b/Site/Index.html
@@ -20,12 +20,10 @@
     Nunc libero mi, fermentum vitae augue eget, eleifend finibus nibh. Mauris eleifend, leo et tempor aliquam, enim sapien ornare ex, imperdiet egestas nulla purus ut elit. Cras sem orci, tempor et nulla vitae, elementum ornare orci. In commodo arcu vitae eros egestas auctor. Donec vel urna fermentum, consequat ex sit amet, vehicula ipsum. Aenean quis mauris quis turpis eleifend accumsan sed porta nulla. Donec faucibus pretium aliquet.
   </div>
 
-  <div id="box", class="full">
+  <div id="box", class="ful">
     <h3 id="green">Sushi</h3>
-    Suspendisse vitae dolor vel tortor mattis luctus non sollicitudin metus. Curabitur consectetur, urna a hendrerit pellentesque, sem orci rhoncus odio, nec fringilla quam enim sed est. Sed sit amet dolor maximus neque porttitor luctus vel rhoncus ipsum. Suspendisse sit amet enim non magna vulputate scelerisque.
+    Suspendisse vitae dolor vel tortor mattis luctus non sollicitudin metus. Curabitur consectetur, urna a hendrerit pellentesque, sem orci rhoncus odio, nec fringilla quam enim sed est. Sed sit amet dolor maximus neque porttitor luctus vel rhoncus ipsum. Suspendisse sit amet enim non magna vulputate scelerisqued.
   </div>
-
-
 
 </body>
 </html>
