--- a/Site/Index.html
+++ b/Site/Index.html
@@ -17,7 +17,7 @@
   <nav id="pink" class="navbar navbar-default"> 
     <div class="container"></div>
     <div class="navbar-brand">
-      <a href="index.html" id="pink" ><h1>Jennu's Diary</h1></a>
+      <a href="index.html" id="pink" ><h1>Jennu's Diary<3</h1></a>
     </div>
     
 
