--- a/Site/Index.html
+++ b/Site/Index.html
@@ -14,10 +14,10 @@
 
 <body>
 <header>
-  <nav id="pink" class="navbar navbar-default"> 
+  <nav  class="navbar navbar-default"> 
     <div class="container"></div>
     <div class="navbar-brand">
-      <a href="index.html" id="pink" ><h1>Jennu's Diary<3</h1></a>
+      <a href="index.html" id="pink" class="pull-left"><h1>Jennu's Diary<3</h1></a>
     </div>
     
 
